--- a/test.html
+++ b/test.html
@@ -10,9 +10,15 @@
     <!-- Navigation Bar -->
     <nav>
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#">Home/About</a></li>
+            <li><a href="#">Do Nows</a></li>
+            <li><a href="#">Unit 1</a></li>
+            <li><a href="#">Unit 2</a></li>
+            <li><a href="#">Unit 3</a></li>
+            <li><a href="#">Unit 4</a></li>
+            <li><a href="#">Unit 5</a></li>
+            <li><a href="#">Unit 6</a></li>
+            <li><a href="#">Unit 7</a></li>
         </ul>
     </nav>
 
@@ -107,3 +113,4 @@
         
 </body>
 </html>
+<script src="scripts/html.js"></script>
